--- a/styles/base.css
+++ b/styles/base.css
@@ -33,6 +33,8 @@ section.card {
 	margin: 0 auto;
     grid-template-columns: 1fr;
     grid-gap: 1rem;
+	box-shadow: 3px 3px #9c9e9d;
+	border-radius: 10px;
 }
 
 h3 {
