--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,8 +1,16 @@
 @media (min-width: 640px) {
-	nav ul, main {
+	nav ul {
 		display: flex;
 	}
-	nav ul li, main {
+	nav ul li {
 		flex: 1 1 100%;
 	}
+	main {
+		grid-template-columns: 2fr 1fr;
+	}
+	main h2 {
+		grid-column: 1/3;
+
+	}
 }
+
