--- a/styles/base.css
+++ b/styles/base.css
@@ -80,3 +80,12 @@ nav a:hover {
 .active {
 	color: yellow;
 }
+
+#mode {
+	position: absolute;
+	top: 1rem;
+	right: 1rem;
+	font-size: 3rem;
+	cursor: pointer;
+	font-size: 2rem;
+}
