--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,9 +1,11 @@
 @media (min-width: 640px) {
 	nav ul {
 		display: flex;
+		flex-direction: row;
 	}
 	nav ul li {
 		flex: 1 1 100%;
+		flex-direction: row;
 	}
 	main {
 		grid-template-columns: 2fr 1fr;
@@ -11,6 +13,16 @@
 	main h2 {
 		grid-column: 1/3;
 
+	}
+	#menu {
+		display: none; /* hide hamburger button */
+	}
+	.navigation {
+		flex-direction: row;
+	}
+	.navigation li {
+		display: block;
+		flex: 1 1 100%;
 	}
 }
 
