--- a/styles/base.css
+++ b/styles/base.css
@@ -73,6 +73,11 @@ nav a {
 	text-decoration: none;
 }
 
+iframe {
+	box-shadow: 3px 3px #9c9e9d;
+	border-radius: 10px;
+}
+
 nav a:hover {
 	border: 1px solid #fff;
 }
