--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -183,3 +183,31 @@ footer {
 .open li a {
 	display: block;
 }
+div header {
+  grid-area: header;
+  background-color: #fed330;
+  padding: 20px;
+}
+div article {
+  grid-area: content;
+  background-color: #20bf6b;
+  padding: 20px;
+}
+div aside {
+  grid-area: sidebar;
+  background-color: #45aaf2;
+}
+div footer {
+  padding: 20px;
+  grid-area: footer;
+  background-color: #fd9644;
+}
+.wrapper {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: 1fr 3fr;
+  grid-template-areas: 
+    "header  header"
+    "sidebar content"
+    "footer  footer";
+}
