--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -25,3 +25,13 @@
 		flex: 1 1 100%;
 	}
 }
+@media (max-width: 640px) {
+    .wrapper {
+      grid-template-columns: 4fr;
+      grid-template-areas:
+        "header"
+        "content"
+        "sidebar"
+        "footer";
+    }
+}
