--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -222,3 +222,10 @@ div footer {
   padding: 10px;
   border-radius: 10px;
 }
+
+form label.top input:required {
+  border-left: red solid 6px;
+}
+form label.top input:required:valid {
+  border-left: green solid 6px;
+}
